# pt-ot

./: README.md  pyproject.toml
notebooks/: prueba_tecnica_jeremiah.ipynb
src/: models.py
