[project]
name = "pt-ot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
